--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/account.min.css?_v=20230921130615">
+    <link rel="stylesheet" href="css/account.min.css?_v=20230921132204">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -766,7 +766,7 @@
                                             <div class="catalog__item prod-card">
                                                 <div class="prod-card__labels">
                                                     <span class="prod-card__label">-20 %</span>
-                                                    <button type="button" class="prod-card__delete">
+                                                    <button type="button" class="prod-card__delete" title="Delete">
                                                         <svg>
                                                             <use href="img/icons/icons.svg#close"></use>
                                                         </svg>
@@ -797,7 +797,7 @@
                                             </div>
                                             <div class="catalog__item prod-card">
                                                 <div class="prod-card__labels">
-                                                    <button type="button" class="prod-card__delete">
+                                                    <button type="button" class="prod-card__delete" title="Delete">
                                                         <svg>
                                                             <use href="img/icons/icons.svg#close"></use>
                                                         </svg>
@@ -886,13 +886,15 @@
                                                                 </div>
                                                             </div>
                                                             <div class="colors-card__navigation navigation">
-                                                                <button type="button" class="navigation__prev">
+                                                                <button type="button" class="navigation__prev"
+                                                                    title="Previous">
                                                                     <svg>
                                                                         <use href="img/icons/icons.svg#arrow2-str">
                                                                         </use>
                                                                     </svg>
                                                                 </button>
-                                                                <button type="button" class="navigation__next">
+                                                                <button type="button" class="navigation__next"
+                                                                    title="Next">
                                                                     <svg>
                                                                         <use href="img/icons/icons.svg#arrow2-str">
                                                                         </use>
@@ -910,7 +912,7 @@
                                             </div>
                                             <div class="catalog__item prod-card disable">
                                                 <div class="prod-card__labels">
-                                                    <button type="button" class="prod-card__delete">
+                                                    <button type="button" class="prod-card__delete" title="Delete">
                                                         <svg>
                                                             <use href="img/icons/icons.svg#close"></use>
                                                         </svg>
@@ -936,7 +938,7 @@
                                             <div class="catalog__item prod-card">
                                                 <div class="prod-card__labels">
                                                     <span class="prod-card__label">-20 %</span>
-                                                    <button type="button" class="prod-card__delete">
+                                                    <button type="button" class="prod-card__delete" title="Delete">
                                                         <svg>
                                                             <use href="img/icons/icons.svg#close"></use>
                                                         </svg>
@@ -1076,7 +1078,7 @@
         </div>
     </div>
 </div>
-    <script src="js/account.min.js?_v=20230921130615" defer></script>
+    <script src="js/account.min.js?_v=20230921132204" defer></script>
 </body>
 
 </html>
